# mns2.0

./: .gitignore  README.md
src/: CMakeLists.txt
src/cmake/: ARGoSBuildChecks.cmake  FindSRoCS.cmake
src/core/api/: DroneRealistSimulator.lua  builderbotAPI.lua  commonAPI.lua  droneAPI.lua  pipuckAPI.lua
src/core/utils/: ExperimentCommon.lua  LogReader.py  Logger.lua  MorphologyCGenerator.lua  MorphologyCommon.lua  Transform.lua
src/core/vns/: Allocator.lua  Avoider.lua  CollectiveSensor.lua  Connector.lua  Driver.lua  DroneConnector.lua  IntersectionDetector.lua  Parameters.lua  PipuckConnector.lua  SensorUpdater.lua  Stabilizer.lua  Stabilizer_backup.lua  VNS.lua
src/experiment/api/: builderbotAPI.lua  commonAPI.lua  droneAPI.lua  pipuckAPI.lua
src/experiment/data/: CMakeLists.txt
src/experiment/testing/: CMakeLists.txt
src/experiment/utils/: Message.lua  MinCostFlowNetwork.lua  MorphologyCGenerator.lua  RandomPairs.lua
src/experiment/vns/: Allocator.lua  Allocator_old.lua  Assigner.lua  Avoider.lua  BrainKeeper.lua  CollectiveSensor.lua  Connector.lua  Connector_backup.lua  Driver.lua  DroneConnector.lua  IntersectionDetector.lua  Parameters.lua  PipuckConnector.lua  Scale.lua  ScaleManager.lua  Spreader.lua  VNS.lua
src/experiments/: CMakeLists.txt
src/experiments/exp_0_hw_01_formation_1_2d_10p/: README  common.in.lua  run.in.py  vns_template.in.argos
src/experiments/exp_0_hw_02_obstacle_avoidance_small/: README  generate_hw_argos.in.py  morphology.lua  run.in.py  vns_template.in.argos
src/experiments/exp_0_hw_03_obstacle_avoidance_large/: README  common.in.lua  run.in.py
src/experiments/exp_0_hw_04_switch_line/: README  common.in.lua  run.in.py
src/experiments/exp_0_hw_05_gate_switch/: CMakeLists.txt  README  common.in.lua  run.in.py
src/experiments/exp_0_hw_06_formation_1_3d_14p/: CMakeLists.txt  README  common.in.lua  morphology.lua  run.in.py
src/experiments/exp_0_hw_07_fault_tolerance/: README  common.in.lua  run.in.py
src/experiments/exp_0_hw_08_split/: README  common.in.lua  run.in.py
src/experiments/exp_0_hw_09_1d_switch_rescue/: CMakeLists.txt  README  common.in.lua  generate_hw_argos.in.py  run.in.py
src/experiments/exp_0_hw_10_formation_1_2d_6p_group_start/: CMakeLists.txt  README  common.in.lua  run.in.py
src/experiments/exp_1_simu_01_formation_10d/: common.in.lua  morphology.lua  run.in.py
src/experiments/exp_1_simu_02_obstacle_avoidance_small_10d/: CMakeLists.txt  README  common.in.lua  morphologiesGenerator.in.lua  run.in.py  vns_template.in.argos
src/experiments/exp_1_simu_03_obstacle_avoidance_large_10d/: README  common.in.lua  morphology.lua  run.in.py
src/experiments/exp_1_simu_04_switch_line/: README  common.in.lua  run.in.py
src/experiments/exp_1_simu_08_split/: CMakeLists.txt  common.in.lua  morphologiesGenerator.in.lua  morphologiesGenerator_debug.in.lua  run.in.py  run_debug.in.py
src/experiments/exp_1_simu_10_formation_10d_group_start/: README  morphology.lua  run.in.py
src/experiments/exp_2_simu_scalability/: README  common.in.lua  morphologiesGenerator_bump_test.in.lua  run.in.py
src/experiments/exp_2_simu_scalability_analyze/: CMakeLists.txt  common.in.lua  morphologiesGenerator.in.lua  morphologiesGenerator_forward_again.in.lua  run.in.py  run_debug_choose_gate.in.py  run_debug_forward_again.in.py  run_debug_reference_bump_test.in.py  run_debug_structure3.in.py
src/experiments/exp_3_simu_01_fault_tolerance_66/: CMakeLists.txt  README  common.in.lua  morphologiesGenerator.in.lua
src/experiments/exp_3_simu_02_fault_tolerance_33/: README  common.in.lua  run.in.py  run_debug.in.py
src/experiments/exp_3_simu_03_fault_tolerance_communication/: README  common.in.lua  morphologiesGeneratorDebug.in.lua
src/experiments/exp_3_simu_04_fault_tolerance_visual/: README  common.in.lua  run.in.py  run_debug.in.py  vns_template.in.argos
src/extensions/: my_loop_functions.cpp
src/loop_functions/: vns_loop_functions.cpp  vns_loop_functions.h
src/qtopengl_extensions/: my_qtopengl_user_functions.cpp
src/qtopengl_user_functions/: builderbot_qtopengl_user_functions.cpp  builderbot_qtopengl_user_functions.h
src/scripts/: CMakeLists.txt  createArgosScenario.py  drawData.py  drawSRFig.py  drawTrackLogs.py  generateSRFigs.in.sh  run_100.sh  run_threads.sh  video_compress.sh
src/scripts/logReader/: Quaternion.lua  logReader.lua  logReplayer.py
src/scripts/pklReader/: logGenerator.py  parse_journal.py  parse_journal_backup.py
src/testing/: CMakeLists.txt
src/testing/00_environment_test/: builderbot.lua  drone.lua  pipuck.lua
src/testing/01_test_formation/: drone.in.lua  pipuck.in.lua  vns.in.argos
src/testing/data_01_establish_formation_scatter/: drone.lua  pipuck.lua  run_demo.in.py
src/testing/exp_00_real_scenario/: CMakeLists.txt  common.in.lua  morphology1.lua  morphology3.lua  run.in.py
src/testing/exp_01_1_establish_formation_scatter_line/: CMakeLists.txt  common.in.lua  generate_hw_argos.in.py  morphology.lua  run.in.py
src/testing/exp_01_2_establish_formation_scatter_T/: CMakeLists.txt  morphology.lua  run.in.py
src/testing/exp_01_3_establish_formation_2d_10p/: common.in.lua  run.in.py
src/testing/exp_01_4_establish_formation_3d_8p/: common.in.lua  generate_hw_argos.in.py  morphology.lua  run.in.py
src/testing/exp_01_establish_formation_scatter/: common.in.lua  morphology.lua  run.in.py
src/testing/exp_01_real_scenario/: CMakeLists.txt  common.in.lua  drone.lua  morphology1.lua  morphology2.lua  pipuck.lua  predator.in.lua  run.in.py  vns.argos.in  vns_template.in.argos
src/testing/exp_02_1_establish_formation_matrix_line/: run.in.py
src/testing/exp_02_establish_formation_matrix/: CMakeLists.txt  common.in.lua  morphology.lua  run.in.py
src/testing/exp_03_1_obstacle_avoidance_small_hor/: common.in.lua  generate_hw_argos.in.py  morphology.lua  run.in.py
src/testing/exp_03_2_obstacle_avoidance_small_ver/: common.in.lua  run.in.py
src/testing/exp_03_obstacle_avoidance_small/: common.in.lua  morphology.lua  run.in.py  vns_template.in.argos
(+78505 files in other folders)
