add_subdirectory(exp_0_hw_01_formation_1_2d_10p)
add_subdirectory(exp_0_hw_02_obstacle_avoidance_small)
add_subdirectory(exp_0_hw_03_obstacle_avoidance_large)
add_subdirectory(exp_0_hw_04_switch_line)
add_subdirectory(exp_0_hw_05_gate_switch)
add_subdirectory(exp_0_hw_06_formation_1_3d_14p)
add_subdirectory(exp_0_hw_07_fault_tolerance)
add_subdirectory(exp_0_hw_08_split)