add_subdirectory(exp_0_hw_01_formation_1_2d_10p)
add_subdirectory(exp_0_hw_02_obstacle_avoidance_small)
add_subdirectory(exp_0_hw_03_obstacle_avoidance_large)
add_subdirectory(exp_0_hw_04_switch_line)
add_subdirectory(exp_0_hw_05_gate_switch)
add_subdirectory(exp_0_hw_06_formation_1_3d_14p)
add_subdirectory(exp_0_hw_07_fault_tolerance)
add_subdirectory(exp_0_hw_08_split)
add_subdirectory(exp_0_hw_09_1d_switch_rescue)
add_subdirectory(exp_0_hw_10_formation_1_2d_6p_group_start)

add_subdirectory(exp_1_simu_01_formation_10d)
add_subdirectory(exp_1_simu_02_obstacle_avoidance_small_10d)
add_subdirectory(exp_1_simu_03_obstacle_avoidance_large_10d)
add_subdirectory(exp_1_simu_04_switch_line)
add_subdirectory(exp_1_simu_08_split)
add_subdirectory(exp_1_simu_10_formation_10d_group_start)

add_subdirectory(exp_2_simu_scalability)
add_subdirectory(exp_2_simu_scalability_analyze)

add_subdirectory(exp_3_simu_01_fault_tolerance_66)
add_subdirectory(exp_3_simu_02_fault_tolerance_33)
add_subdirectory(exp_3_simu_03_fault_tolerance_communication)
add_subdirectory(exp_3_simu_04_fault_tolerance_visual)