add_subdirectory(test_00_environment)
add_subdirectory(test_01_formation)
add_subdirectory(test_02_neuron)

add_subdirectory(exp_01_real_scenario)

add_subdirectory(hw_01_drone_calibration)

#add_subdirectory(02_allocate)
#add_subdirectory(03_avoid)
#add_subdirectory(04_scenario)
#add_subdirectory(05_scenario2)
#add_subdirectory(06_scenario3)
#add_subdirectory(07_auto_scenario)
#add_subdirectory(08_collectivesensing)
#add_subdirectory(09_split)

#add_subdirectory(10_centralize)