add_subdirectory(test_00_environment)
add_subdirectory(test_01_formation)
add_subdirectory(test_02_neuron)
add_subdirectory(test_03_dynamic_bt)
add_subdirectory(test_04_stationary_mns)

add_subdirectory(hw_00_tests)
add_subdirectory(hw_01_drone_calibration)
add_subdirectory(hw_02_drone_navigation)
add_subdirectory(hw_03_drone_api_driver)
add_subdirectory(hw_04_vns)
add_subdirectory(hw_05_formation)
add_subdirectory(hw_05_formation_2_drones)
add_subdirectory(hw_06_two_drones)
add_subdirectory(hw_07_1p2d)
add_subdirectory(hw_08_2p2d)
add_subdirectory(hw_09_brain_drone_stabilizer)
add_subdirectory(hw_10_pipucks_optitrack)
add_subdirectory(hw_11_skyeye)

add_subdirectory(exp_00_real_scenario)
add_subdirectory(exp_01_1_establish_formation_scatter_line)
add_subdirectory(exp_01_2_establish_formation_scatter_T)
add_subdirectory(exp_02_1_establish_formation_matrix_line)
add_subdirectory(exp_02_2_establish_formation_matrix_T)
add_subdirectory(exp_03_obstacle_avoidance_small)
add_subdirectory(exp_04_obstacle_avoidance_large)
add_subdirectory(exp_05_switch_line)
#add_subdirectory(exp_06_switch_curve)
add_subdirectory(exp_07_switch_grab)
add_subdirectory(exp_08_split)
add_subdirectory(exp_09_scalability)

#add_subdirectory(02_allocate)
#add_subdirectory(03_avoid)
#add_subdirectory(04_scenario)
#add_subdirectory(05_scenario2)
#add_subdirectory(06_scenario3)
#add_subdirectory(07_auto_scenario)
#add_subdirectory(08_collectivesensing)
#add_subdirectory(09_split)

#add_subdirectory(10_centralize)