add_subdirectory(01_displace_mns)
add_subdirectory(02_displace_mns_drone)
add_subdirectory(03_cross_displace)
add_subdirectory(04_cross_displace_drone)
add_subdirectory(05_displace_mns_drone_45)

add_subdirectory(06_full_scenario1)
add_subdirectory(07_full_scenario2)
add_subdirectory(08_full_scenario3)
add_subdirectory(09_auto_scenario)

add_subdirectory(10_establish_formation_scatter)
add_subdirectory(11_establish_formation_matrix)
add_subdirectory(12_obstacle_avoidance_small)
add_subdirectory(13_obstacle_avoidance_large)
add_subdirectory(14_switch_line)
add_subdirectory(15_switch_grab)
add_subdirectory(16_switch_fast)
add_subdirectory(17_split)

add_subdirectory(18_scalable_full_scenario)

add_subdirectory(19_evaluator_test)